--- a/brit/static/scss/layout/_dashboard-fixed.scss
+++ b/brit/static/scss/layout/_dashboard-fixed.scss
@@ -14,12 +14,24 @@
             width: $sidenav-base-width;
             height: 100vh;
             z-index: $zindex-sidenav;
+            overflow: hidden;
 
             .sb-sidenav {
                 padding-top: $topnav-base-height;
+                overflow: hidden;
 
                 .sb-sidenav-menu {
                     overflow-y: auto;
+                    overflow-x: hidden;
+                    min-height: 0;
+                    scrollbar-width: none;
+                    -ms-overflow-style: none;
+
+                    &::-webkit-scrollbar {
+                        display: none;
+                        width: 0;
+                        height: 0;
+                    }
                 }
             }
         }
